# cpp-ecs-engine

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json
docs/: README.md  [양식 1] 디자인개요서 양식.md  사용자 시나리오.md  설계 구조.md
docs/architecture/: 프로젝트 구조.md
docs/product/: Product Backlog - Pathfinder 반영안.md
docs/제출용/종합설계/: Pathfinder_반영_발표_초안.md  발표대본_EPIC이후.md
src/: main.cpp
tests/: ImportContractsTests.cpp
tests/dxf/: README.md  generate_building_samples.py  office_suite.dxf
uml/: PlantUML 읽는 법.md  application-run-results-workflow.puml  application-run-results-workflow.puml 해설.md  domain-control-model.puml  domain-control-model.puml 해설.md  domain-result-artifacts.puml  domain-result-artifacts.puml 해설.md  domain-scenario-model.puml  domain-scenario-model.puml 해설.md  engine-routing-and-connectors.puml  engine-routing-and-connectors.puml 해설.md
